@@ -30,6 +30,7 @@ Specifically, the GPL parts of FFmpeg are
     - vf_cropdetect.c
     - vf_decimate.c
     - vf_delogo.c
+    - vf_geq.c
     - vf_hqdn3d.c
     - vf_hue.c
     - vf_mp.c
